# wingpanel-indicator-hackspeed

./: README.md  meson.build
data/: com.github.rohitpaulk.wingpanel-indicator-hackspeed.gresource.xml  indicator.css  meson.build  nightlight.appdata.xml.in
po/: sk.po
src/: Indicator.vala  IndicatorWidget.vala  KeystrokeCollection.vala  KeystrokeRecorder.vala  PopoverWidget.vala  TypingSpeedCalculator.vala  TypingSpeedCalculatorTest.vala  TypingSpeedFormatter.vala  XInputLogParser.vala  XInputLogParserTest.vala  keycapture.c
src/Widgets/: PopoverWidget.vala
